ran setup_template script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "app-name"
+name = "survey_subsampling"
 version = "0.1.0"
-description = "A beautiful description."
-authors = ["Reinder Vos de Wael <reinder.vosdewael@childmind.org>"]
+description = "Why take a full survey when you can just answer a few questions?"
+authors = ["gkiar <gkiar@bridges>"]
 license = "LGPL-2.1"
 readme = "README.md"
-packages = [{include = "APP_NAME", from = "src"}]
+packages = [{include = "survey_subsampling", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
