--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,36 +2,83 @@
 name = "survey_subsampling"
 version = "0.1.0"
 description = "Why take a full survey when you can just answer a few questions?"
-authors = ["gkiar <gkiar@bridges>"]
+authors = [ "gkiar <gkiar@bridges>" ]
 license = "LGPL-2.1"
 readme = "README.md"
-packages = [{include = "survey_subsampling", from = "src"}]
 
-[tool.poetry.dependencies]
-python = "^3.11"
+  [[tool.poetry.packages]]
+  include = "survey_subsampling"
+  from = "src"
+
+  [tool.poetry.dependencies]
+  python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.2"
 mypy = "^1.4.0"
-black = "^23.3.0"
-isort = "^5.12.0"
 pre-commit = "^3.3.3"
 pytest-cov = "^4.1.0"
 
 [tool.poetry.group.docs.dependencies]
 pdoc = "^14.0.0"
 
-[tool.poetry.extras]
-docs = ["pdoc"]
-
-[build-system]
-requires = ["poetry-core>=1.2.0"]
-build-backend = "poetry.core.masonry.api"
+  [tool.poetry.extras]
+  docs = [ "pdoc" ]
 
 [tool.pytest.ini_options]
-pythonpath = [
-  "src"
-]
+pythonpath = [ "src" ]
 
 [tool.mypy]
 ignore_missing_imports = true
+
+[tool.ruff]
+exclude = [
+  ".bzr",
+  ".direnv",
+  ".eggs",
+  ".git",
+  ".git-rewrite",
+  ".hg",
+  ".mypy_cache",
+  ".nox",
+  ".pants.d",
+  ".pytype",
+  ".ruff_cache",
+  ".svn",
+  ".tox",
+  ".venv",
+  "__pypackages__",
+  "_build",
+  "buck-out",
+  "build",
+  "dist",
+  "node_modules",
+  "venv"
+]
+line-length = 88
+indent-width = 4
+src = [ "src" ]
+target-version = "py311"
+
+  [tool.ruff.lint]
+  select = [ "ANN", "D", "E", "F", "I" ]
+  ignore = [ "ANN101", "ANN102" ]
+  fixable = [ "ALL" ]
+  unfixable = [ ]
+  dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+  [tool.ruff.format]
+  quote-style = "double"
+  indent-style = "space"
+  skip-magic-trailing-comma = false
+  line-ending = "auto"
+
+  [tool.ruff.pydocstyle]
+  convention = "google"
+
+  [tool.ruff.per-file-ignores]
+  "tests/**/*.py" = [ ]
+
+[build-system]
+requires = [ "poetry-core>=1.2.0" ]
+build-backend = "poetry.core.masonry.api"
